improve scope rebinding

--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -12,6 +12,13 @@ categories.workspace = true
 [dependencies]
 thiserror.workspace = true
 
+# colors
+owo-colors = "4"
+
+# serialization
+serde.workspace = true
+serde_yaml.workspace = true
+
 # virtual file system
 vfs.workspace = true
 
