--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -12,6 +12,9 @@ categories.workspace = true
 [dependencies]
 thiserror.workspace = true
 
+# error diagnostics
+miette = { version = "7", features = ["fancy"] }
+
 # colors
 owo-colors = "4"
 
