add virtual yaml tree experiment

--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -10,10 +10,14 @@ repository.workspace = true
 categories.workspace = true
 
 [dependencies]
+color-eyre.workspace = true
 thiserror.workspace = true
 
 # error diagnostics
 miette = { version = "7", features = ["fancy"] }
+
+# regex
+regex = "1"
 
 # colors
 owo-colors = "4"
