--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -25,6 +25,7 @@ owo-colors = "4"
 # serialization
 serde.workspace = true
 serde_yaml.workspace = true
+serde_json.workspace = true
 
 # virtual file system
 vfs.workspace = true
@@ -33,6 +34,9 @@ vfs.workspace = true
 tree-sitter.workspace = true
 helm-schema-template.workspace = true
 helm-schema-template-grammar.workspace = true
+
+# chart loader/model
+helm-schema-chart.workspace = true
 
 [dev-dependencies]
 color-eyre.workspace = true
