--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -27,6 +27,9 @@ serde.workspace = true
 serde_yaml.workspace = true
 serde_json.workspace = true
 
+# optional HTTP downloader for upstream kubernetes-json-schema cache
+ureq = { version = "2", default-features = true }
+
 # virtual file system
 vfs.workspace = true
 
