pure rust fused go template and yaml parser

--- a/crates/helm-schema-yaml-template/Cargo.toml
+++ b/crates/helm-schema-yaml-template/Cargo.toml
@@ -12,6 +12,12 @@ edition = "2018"
 
 [dependencies]
 linked-hash-map = "0.5.3"
+thiserror = "1"
 
 [dev-dependencies]
 quickcheck = "0.9"
+lexpr = "0.2"
+indoc = "2"
+similar-asserts = "1"
+
+[workspace]
