share sexpr testing utils between tree sitter and rust parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
   # "crates/*",
   "crates/test-util",
+  "crates/helm-schema-yaml-template",
   "crates/helm-schema-core",
   "crates/helm-schema-chart",
   "crates/helm-schema-cli",
@@ -59,6 +60,7 @@ tree-sitter = "0.25"
 
 # local charts
 test-util = { path = "crates/test-util" }
+yaml-rust = { path = "crates/helm-schema-yaml-template" }
 helm-schema-core = { path = "crates/helm-schema-core" }
 helm-schema-chart = { path = "crates/helm-schema-chart" }
 helm-schema-cli = { path = "crates/helm-schema-cli" }
