--- a/crates/helm-schema-template-grammar/Cargo.toml
+++ b/crates/helm-schema-template-grammar/Cargo.toml
@@ -23,3 +23,5 @@ tree-sitter-language = "0.1"
 [dev-dependencies]
 tree-sitter.workspace = true
 indoc.workspace = true
+test-util.workspace = true
+similar-asserts = "1"
