schema and ir tests

--- a/crates/helm-schema-mapper/Cargo.toml
+++ b/crates/helm-schema-mapper/Cargo.toml
@@ -38,6 +38,9 @@ tree-sitter.workspace = true
 helm-schema-template.workspace = true
 helm-schema-template-grammar.workspace = true
 
+# fused yaml+helm parser
+yaml-rust.workspace = true
+
 # chart loader/model
 helm-schema-chart.workspace = true
 
@@ -45,3 +48,4 @@ helm-schema-chart.workspace = true
 color-eyre.workspace = true
 test-util.workspace = true
 indoc.workspace = true
+similar-asserts = "1"
