symbolic ir walker and proper upstream schema resolving

--- a/crates/helm-schema-gen/Cargo.toml
+++ b/crates/helm-schema-gen/Cargo.toml
@@ -13,6 +13,7 @@ categories.workspace = true
 thiserror.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_yaml.workspace = true
 regex.workspace = true
 
 helm-schema-ir.workspace = true
