--- a/crates/helm-schema-ir/Cargo.toml
+++ b/crates/helm-schema-ir/Cargo.toml
@@ -14,8 +14,10 @@ thiserror.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+tree-sitter.workspace = true
 
 helm-schema-ast.workspace = true
+helm-schema-template-grammar.workspace = true
 
 [dev-dependencies]
 color-eyre.workspace = true
