--- a/crates/helm-schema-k8s/Cargo.toml
+++ b/crates/helm-schema-k8s/Cargo.toml
@@ -18,8 +18,9 @@ serde_yaml.workspace = true
 helm-schema-ir.workspace = true
 
 # HTTP for upstream schema fetching
-ureq = { version = "2", default-features = true }
+ureq = { version = "3", default-features = true }
 
 [dev-dependencies]
 color-eyre.workspace = true
 similar-asserts = "1"
+test-util.workspace = true
