--- a/crates/helm-schema-yaml-template/Cargo.toml
+++ b/crates/helm-schema-yaml-template/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "yaml-rust"
-version = "0.4.5" # remember to update html_root_url
-authors = ["Yuheng Chen <yuhengchen@sensetime.com>"]
-homepage = "http://chyh1990.github.io/yaml-rust/"
-documentation = "https://docs.rs/yaml-rust"
-license = "MIT/Apache-2.0"
-description = "The missing YAML 1.2 parser for rust"
-repository = "https://github.com/chyh1990/yaml-rust"
-readme = "README.md"
-edition = "2018"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+description.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+categories.workspace = true
 
 [dependencies]
-linked-hash-map = "0.5.3"
-thiserror = "1"
+linked-hash-map = "0"
+thiserror = "2"
 
 [dev-dependencies]
-quickcheck = "0.9"
+test-util.workspace = true
+
+quickcheck = "1.1"
 lexpr = "0.2"
 indoc = "2"
 similar-asserts = "1"
-test-util = { workspace = true }
