validate generated jsons chemas against rendered helm templates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ serde_json = "1"
 # regex
 regex = "1"
 
+# json schema validation
+jsonschema = "0.28"
+
 # async runtime
 tokio = { version = "1", features = ["full"] }
 futures = "0"
