--- a/crates/helm-schema-gen/Cargo.toml
+++ b/crates/helm-schema-gen/Cargo.toml
@@ -25,3 +25,6 @@ indoc.workspace = true
 test-util.workspace = true
 similar-asserts = "1"
 helm-schema-ast.workspace = true
+jsonschema.workspace = true
+serde_yaml.workspace = true
+serde_json.workspace = true
