use vfs for chart extraction in the CLI

--- a/crates/helm-schema-cli/Cargo.toml
+++ b/crates/helm-schema-cli/Cargo.toml
@@ -21,7 +21,7 @@ serde_json.workspace = true
 serde_yaml.workspace = true
 flate2 = "1"
 tar = "0.4"
-tempfile = "3"
+vfs.workspace = true
 
 helm-schema-ast.workspace = true
 helm-schema-gen.workspace = true
@@ -31,3 +31,4 @@ helm-schema-k8s.workspace = true
 [dev-dependencies]
 similar-asserts = "1"
 test-util.workspace = true
+tempfile = "3"
