--- a/crates/helm-schema-cli/Cargo.toml
+++ b/crates/helm-schema-cli/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 color-eyre.workspace = true
+thiserror.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yaml.workspace = true
