add test for service_monitor.yaml from surveyor chart and refactor schema providers

--- a/testdata/crds-catalog/index.yaml
+++ b/testdata/crds-catalog/index.yaml
@@ -3,3 +3,7 @@ monitoring.coreos.com:
     filename: monitoring.coreos.com/prometheusrule_v1.json
     kind: PrometheusRule
     name: prometheusrule_v1
+  - apiVersion: monitoring.coreos.com/v1
+    filename: monitoring.coreos.com/servicemonitor_v1.json
+    kind: ServiceMonitor
+    name: servicemonitor_v1
