readme and scaffolding

--- a/crates/helm-schema-cli/Cargo.toml
+++ b/crates/helm-schema-cli/Cargo.toml
@@ -29,6 +29,9 @@ helm-schema-gen.workspace = true
 helm-schema-ir.workspace = true
 helm-schema-k8s.workspace = true
 
+[target.'cfg(target_env = "musl")'.dependencies]
+mimalloc = "0.1"
+
 [dev-dependencies]
 similar-asserts = "1"
 test-util.workspace = true
