ci: small fixes

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
         os: [macos-latest, ubuntu-24.04, windows-latest]
     steps:
       - uses: actions/checkout@v6
+      - uses: azure/setup-helm@v4
       - uses: arduino/setup-task@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
@@ -35,6 +36,7 @@ jobs:
         os: [macos-latest, ubuntu-24.04, windows-latest]
     steps:
       - uses: actions/checkout@v6
+      - uses: azure/setup-helm@v4
       - uses: arduino/setup-task@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
