--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ tree-sitter = "0.25"
 
 # local crates
 test-util = { path = "crates/test-util" }
-yaml-rust = { path = "crates/helm-schema-yaml-template" }
+helm-schema-yaml-template = { path = "crates/helm-schema-yaml-template" }
 helm-schema-template-grammar = { path = "crates/helm-schema-template-grammar" }
 helm-schema-ast = { path = "crates/helm-schema-ast" }
 helm-schema-ir = { path = "crates/helm-schema-ir" }
