--- a/crates/helm-schema-ast/Cargo.toml
+++ b/crates/helm-schema-ast/Cargo.toml
@@ -13,7 +13,7 @@ categories.workspace = true
 thiserror.workspace = true
 
 # fused Rust parser (yaml-rust)
-yaml-rust.workspace = true
+helm-schema-yaml-template.workspace = true
 
 # tree-sitter parser
 tree-sitter.workspace = true
