--- a/crates/helm-schema-yaml-template/Cargo.toml
+++ b/crates/helm-schema-yaml-template/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yaml-rust"
+name = "helm-schema-yaml-template"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
