ci: fix goreleaser build

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ cargo-test.txt
 samples/
 debug/
 cache/
+
+# goreleaser + zig files
+.intentionally-empty-file.o
+*_compiler_family.o
+goreleaser-dist/
