--- a/crates/clippy-wrapper/Cargo.toml
+++ b/crates/clippy-wrapper/Cargo.toml
@@ -8,3 +8,4 @@ publish = false
 workspace = true
 
 [dependencies]
+clippy-shim = { git = "https://github.com/romnn/clippy-shim.git", branch = "main" }
