rename cleanup task

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -78,9 +78,10 @@ tasks:
     cmds:
       - cargo clean {{.CLI_ARGS}}
 
-  clean:zig-garbage:
+  clean:build:
     desc: "remove zigbuild/cc probe garbage object files"
     cmds:
+      # prettier-ignore
       - >-
         find .
         -type f
